--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
-	<body bgcolor= "red">
-        <h1> Hello World </h1>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Cloud DevOps</title>
+  </head>
+<body id='canvas' bgcolor= "red">
+	<script>
+		window.onload = function() {
+			var col = ['red','green','blue'];
+			var num = Math.floor(Math.random() * 3);
+			document.getElementById('canvas').bgColor = col[num]
+		}
+	</script>
+<h1> Hello World! This is a complement to my DevOps course at TCS.</h1>
+</body>
 </html>
